--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,4 @@
-:root {
-    --md-primary-fg-color:        #1c36a9;
-    --md-primary-fg-color--light: #8ca1ff;
-    --md-primary-fg-color--dark:  #011a85;
-    --md-accent-fg-color:        #5e7cff;
-    --md-accent-fg-color--light: #99acff;
-    --md-accent-fg-color--dark:  #000c40;
-  }
+.md-header__button.md-logo img{
+  width: 7.5rem;
+  height: 1.5rem;
+}
